--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,17 @@ body {
   @apply bg-black text-white;
 }
 
+.jump-to-buttons {
+  transform: translateX(calc(-100% + 42px));
+  transition: transform 0.3s ease-in-out;
+
+}
+.jump-to-buttons:hover {
+  transform: translateX(0);
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
 .weekdays-1,
 .weekdays-2,
 .weekdays-3,
@@ -328,4 +339,20 @@ body {
 }
 .event-gray {
   @apply bg-gray-500;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
+.gradient-mask {
+  transition: mask-size 0.3s ease-in-out;
+  -webkit-mask-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(0,0,0,0) 100%);
+  mask-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 10%, rgba(255,255,255,1) 90%, rgba(0,0,0,0) 100%);
+  mask-size: 100% 100%;
+  mask-position: center;
+}
+.gradient-mask:hover {
+  mask-size: 100% 120%;
 }
