--- a/src/index.css
+++ b/src/index.css
@@ -302,37 +302,43 @@ h1,h2,h3,h4,h5,h6 {
 
 
 .event-red {
-  @apply bg-red-500;
+  @apply bg-red-500 hover:bg-red-600;
 }
 .event-orange {
-  @apply bg-orange-500;
+  @apply bg-orange-500 hover:bg-orange-600;
 }
 .event-yellow {
-  @apply bg-yellow-500;
+  @apply bg-yellow-500 hover:bg-yellow-600;
+}
+.event-lime {
+  @apply bg-lime-500 hover:bg-lime-600;
 }
 .event-green {
-  @apply bg-green-500;
+  @apply bg-green-500 hover:bg-green-600;
 }
 .event-blue {
-  @apply bg-blue-500;
+  @apply bg-blue-500 hover:bg-blue-600;
 }
 .event-cyan {
-  @apply bg-cyan-500;
+  @apply bg-cyan-500 hover:bg-cyan-500;
 }
 .event-indigo {
-  @apply bg-indigo-500;
+  @apply bg-indigo-600 hover:bg-indigo-700;
 }
 .event-purple {
-  @apply bg-purple-500;
+  @apply bg-purple-500 hover:bg-purple-600;
 }
 .event-magenta {
-  @apply bg-[#ff00ff];
+  @apply bg-fuchsia-500 hover:bg-fuchsia-600; 
 }
 .event-pink {
-  @apply bg-pink-500;
+  @apply bg-pink-500 hover:bg-pink-600;
 }
 .event-gray {
-  @apply bg-gray-500;
+  @apply bg-zinc-500 hover:bg-zinc-600;
+}
+.event-slate {
+  @apply bg-slate-500 hover:bg-slate-600;
 }
 
 .no-scrollbar::-webkit-scrollbar {
