--- a/src/index.css
+++ b/src/index.css
@@ -353,3 +353,10 @@ h1,h2,h3,h4,h5,h6 {
   mask-size: 100% 100%;
   mask-position: center;
 }
+.gradient-mask-small {
+  transition: mask-size 0.3s ease-in-out;
+  -webkit-mask-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 5%, rgba(255,255,255,1) 95%, rgba(0,0,0,0) 100%);
+  mask-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(255,255,255,1) 5%, rgba(255,255,255,1) 95%, rgba(0,0,0,0) 100%);
+  mask-size: 100% 100%;
+  mask-position: center;
+}
